# E1x-EVK-Demos

./: README.md  burn-mode-instructions.md
E1-Hum-Sentinel/: Makefile  README.md
E1-Hum-Sentinel/firmware/: CMakeLists.txt  Makefile  detector.c  detector.h  dsp.c  dsp.h  fft_tables.c  fft_tables.h  hal.h  main.c  protocol.c  protocol.h
E1-Hum-Sentinel/firmware/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/fabric/: hum_sentinel  hum_sentinel.hex
E1-Hum-Sentinel/firmware/bld/scalar/: hum_sentinel  hum_sentinel.hex  link_echo  link_echo.hex
E1-Hum-Sentinel/firmware/bld/sdk/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/gpio/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/i2c/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/pinmux/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/spi/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/drivers/uart/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/examples/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/examples/drivers/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/examples/drivers/i2c/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/examples/drivers/i2c/scalar/: i2c_detect  i2c_detect.hex
E1-Hum-Sentinel/firmware/bld/sdk/merged/: eff_all_e1x-.mri
E1-Hum-Sentinel/firmware/bld/sdk/stdlib/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/gpio/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/gpio/scalar/: test_gpio  test_gpio.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/i2c/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/i2c/scalar/: i2c_speed_test  i2c_speed_test.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/spi/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/spi/scalar/: test_spi  test_spi.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/uart/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/drivers/uart/scalar/: test_uart  test_uart.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/file/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/file/scalar/: test_file  test_file.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/mtimer/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/mtimer/scalar/: test_mtimer  test_mtimer.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/random/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/random/scalar/: test_random  test_random.hex
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/time/: Makefile  cmake_install.cmake
E1-Hum-Sentinel/firmware/bld/sdk/test/stdlib/time/scalar/: test_time  test_time.hex
E1-Meter-Reader/firmware/: CMakeLists.txt  Makefile  echo_main.c  gauge.c  gauge.h  hal.h  hal_e1.c  hal_posix.c  kernels.c  kernels.h  main.c  protocol.c  protocol.h  ray_tables.c  ray_tables.h
(+30 files in other folders)
